[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fondo.png" type="Texture" id=1]
[ext_resource path="res://assets/gun.png" type="Texture" id=2]
[ext_resource path="res://assets/silueta.png" type="Texture" id=3]
[ext_resource path="res://Book.tscn" type="PackedScene" id=4]
[ext_resource path="res://MainScene.gd" type="Script" id=5]
[ext_resource path="res://Silueta.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/faces/1/h/6.png" type="Texture" id=7]
[ext_resource path="res://assets/progress_under.png" type="Texture" id=8]
[ext_resource path="res://assets/progress.png" type="Texture" id=9]
[ext_resource path="res://Gun.tscn" type="PackedScene" id=10]
[ext_resource path="res://StoreThings.tscn" type="PackedScene" id=11]

[node name="MainScene" type="Node2D"]
script = ExtResource( 5 )

[node name="Silueta2" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 413, 184 )

[node name="EndLabel" type="Label" parent="."]
margin_left = 335.0
margin_top = 143.0
margin_right = 594.0
margin_bottom = 250.0
rect_scale = Vector2( 1.39635, 1.66667 )
text = "Entregaste el pedido correcto.
Clientes errados: 0/3.
Game Over.

Espacio para jugar nuevamente"
autowrap = true

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 512.038, 300.003 )
scale = Vector2( 1.2799, 0.937491 )
texture = ExtResource( 1 )

[node name="Gun" type="Sprite" parent="."]
visible = false
position = Vector2( 880, 506 )
rotation = -0.841224
scale = Vector2( 0.869449, 0.99898 )
texture = ExtResource( 2 )

[node name="StoreThings" parent="." instance=ExtResource( 11 )]
position = Vector2( 61, 406 )
scale = Vector2( 0.796112, 0.719131 )

[node name="StoreThings2" parent="." instance=ExtResource( 11 )]
position = Vector2( 157, 471 )
scale = Vector2( 0.796112, 0.719131 )
item = 1

[node name="Gun2" parent="." instance=ExtResource( 10 )]
position = Vector2( 805, 445 )

[node name="Silueta" type="Sprite" parent="."]
visible = false
position = Vector2( 517, 301 )
texture = ExtResource( 3 )

[node name="Book" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( -16, 4 )

[node name="show_face_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CurrentFace" type="Sprite" parent="."]
visible = false
position = Vector2( 513.375, 267.438 )
scale = Vector2( 3.83203, 3.36133 )
texture = ExtResource( 7 )

[node name="decision_timer" type="Timer" parent="."]
one_shot = true

[node name="ProgressTexture" type="TextureProgress" parent="."]
margin_left = 137.0
margin_top = 20.0
margin_right = 564.0
margin_bottom = 60.0
rect_scale = Vector2( 1.72461, 2.75246 )
max_value = 3.0
step = 0.1
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )

[node name="QuestionRect" type="ColorRect" parent="."]
visible = false
margin_left = 315.0
margin_top = 131.0
margin_right = 355.0
margin_bottom = 171.0
rect_scale = Vector2( 9.75024, 8.2214 )
color = Color( 0.207843, 0.180392, 0.180392, 0.878431 )

[node name="NacButton" type="Button" parent="QuestionRect"]
margin_left = 3.17941
margin_top = 3.40575
margin_right = 160.179
margin_bottom = 23.4057
rect_scale = Vector2( 0.215586, 0.329691 )
text = "Preguntar nacionalidad"

[node name="NomButton" type="Button" parent="QuestionRect"]
margin_left = 3.28197
margin_top = 13.2581
margin_right = 160.282
margin_bottom = 33.2581
rect_scale = Vector2( 0.215586, 0.329691 )
text = "Preguntar nombre"

[node name="ProfButton" type="Button" parent="QuestionRect"]
margin_left = 2.6666
margin_top = 23.8402
margin_right = 159.667
margin_bottom = 43.8402
rect_scale = Vector2( 0.215586, 0.329691 )
text = "Preguntar profesi√≥n"

[connection signal="entered" from="Silueta2" to="." method="_on_Silueta2_entered"]
[connection signal="item_give" from="Silueta2" to="." method="_on_Silueta2_item_give"]
[connection signal="gun_shooted" from="Gun2" to="." method="_on_Gun2_gun_shooted"]
[connection signal="timeout" from="show_face_timer" to="." method="_on_show_face_timer_timeout"]
[connection signal="timeout" from="decision_timer" to="." method="_on_decision_timer_timeout"]
[connection signal="pressed" from="QuestionRect/NacButton" to="." method="_on_NacButton_pressed"]
[connection signal="pressed" from="QuestionRect/NomButton" to="." method="_on_NomButton_pressed"]
[connection signal="pressed" from="QuestionRect/ProfButton" to="." method="_on_ProfButton_pressed"]
